# Robot-Asistente-Laboratorio

./: .gitignore  README.md
src/robot_description/: CMakeLists.txt  package.xml
src/robot_description/launch/: robot_lab.launch.py
src/robot_description/urdf/: robot_lab.xacro
